bootstrap fix for horizontal scroll bar

--- a/static/trcninja-template-2.0.css
+++ b/static/trcninja-template-2.0.css
@@ -21,6 +21,9 @@
     border-left: 1px solid #e7e7e7;
   }
 }
+.navbar-right {
+  margin-right: 0;
+}
 .navbar-top-links {
   margin-right: 0;
 }
